# os

./: .clang-format  CMakeLIsts.txt  CMakeLists.txt  Cargo.toml  LICENSE  \  go.mod
apps/bootloader/: Cargo.toml
apps/bootloader/src/: main.rs  panic.rs
bootloader/: .clangd  Cargo.toml
bootloader/src/: filesystem.rs  info.rs  main.rs  panic.rs
crates/boot/: Cargo.toml
crates/boot/src/: acpi.rs  graphics.rs  info.rs  lib.rs  time.rs
crates/bootinfo/: Cargo.toml
crates/bootinfo/src/: lib.rs
kernel/: .clangd  CMakeLIsts.txt  CMakeLists.txt  Makefile  linker.ld
kernel/boot/: .clangd  boot.h  efi.c
kernel/docs/: basedef.md  defbase.md  defdoc.md  docdef.md
kernel/inc/: basedef.h  defbase.h  defdoc.h  docdef.h  kbuild.h  kdebug.h
kernel/inc/def/: base.h  doc.h
kernel/inc/kernel/: build.h  debug.h
kernel/include/: types.h
kernel/include/arch/: detect.h
kernel/include/arch/aarch64/: instructions.h
kernel/include/arch/current/: instructions.h
kernel/include/arch/x86_64/: instructions.h
kernel/include/boot/: acpi.h  framebuffer.h  info.h  memory.h
kernel/include/utility/: tuple.h
kernel/src/: entry.c  kbuild.c  kdebug.c
kernel/src/bootloader/: bootloader.cxx
kernel/src/kernel/: build.c  debug.c  entry.c
libs/: CMakeLists.txt  README.md
libs/dywoqos_graphics/: CMakeLists.txt
libs/dywoqos_stack/: CMakeLIsts.txt  README.md
public/sdk/: .clangd  CMakeLists.txt
scripts/: build.lua  clean.lua  executing.lua
standard/: loader.go
toolchain/: CMakeLists.txt  README.md
toolchain/libdywoqos_graphics/: CMakeLIsts.txt
virtual/: loader.go  os.go
